@@ -1,3 +1,8 @@
+2008-10-22  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c (seek_slider_pressed_cb): Don't show seeking to
+	label when we can direct seek (Closes: #338390)
+
 2008-10-21  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c (bvw_bus_message_cb):
